@@ -9,7 +9,6 @@ import static uk.gov.hmcts.reform.sscs.util.PartiesOnCaseUtil.getPartiesOnCase;
 import java.util.List;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.collections4.CollectionUtils;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import uk.gov.hmcts.reform.sscs.ccd.callback.Callback;
 import uk.gov.hmcts.reform.sscs.ccd.callback.CallbackType;
@@ -29,7 +28,6 @@ public class UploadDocumentFurtherEvidenceMidEventHandler implements PreSubmitCa
     private final HearingRecordingRequestService hearingRecordingRequestService;
     private final FooterService footerService;
 
-    @Autowired
     public UploadDocumentFurtherEvidenceMidEventHandler(HearingRecordingRequestService hearingRecordingRequestService,
                                                         FooterService footerService) {
         this.hearingRecordingRequestService = hearingRecordingRequestService;
@@ -56,7 +54,7 @@ public class UploadDocumentFurtherEvidenceMidEventHandler implements PreSubmitCa
         final SscsCaseData sscsCaseData = caseDetails.getCaseData();
         PreSubmitCallbackResponse<SscsCaseData> callbackResponse = new PreSubmitCallbackResponse<>(sscsCaseData);
 
-        log.info(String.format("Handling uploadDocumentFurtherEvidence event for caseId %s", sscsCaseData.getCcdCaseId()));
+        log.info("Handling uploadDocumentFurtherEvidence event for caseId %s".formatted(sscsCaseData.getCcdCaseId()));
 
         checkForErrors(callbackResponse);
         buildRequestHearingPageIfRequired(callbackResponse);
