@@ -3,7 +3,7 @@ package uk.gov.hmcts.reform.sscs;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 public final class ResourceLoader {
 
@@ -18,9 +18,9 @@ public final class ResourceLoader {
         URL url = ResourceLoader.class.getClassLoader().getResource(filePath);
 
         if (url == null) {
-            throw new IllegalArgumentException(String.format("Could not find resource in path %s", filePath));
+            throw new IllegalArgumentException("Could not find resource in path %s".formatted(filePath));
         }
 
-        return Files.readAllBytes(Paths.get(url.toURI()));
+        return Files.readAllBytes(Path.of(url.toURI()));
     }
 }
