@@ -3,8 +3,8 @@ package uk.gov.hmcts.reform.sscs.ccd.presubmit.actionpostponementrequest;
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.core.IsNull.notNullValue;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 import static org.mockito.MockitoAnnotations.openMocks;
@@ -18,8 +18,8 @@ import java.util.HashMap;
 import java.util.Map;
 import junitparams.JUnitParamsRunner;
 import junitparams.Parameters;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.junit.runner.RunWith;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Mock;
@@ -59,7 +59,7 @@ public class ActionPostponementRequestMidEventHandlerTest {
     private GenerateFile generateFile;
 
 
-    @Before
+    @BeforeEach
     public void setUp() {
         openMocks(this);
 
@@ -110,6 +110,7 @@ public class ActionPostponementRequestMidEventHandlerTest {
     }
 
     @Test
+    // JunitParamsRunnerToParameterized conversion not supported
     @Parameters({"grant", "refuse"})
     public void givenLanguagePreferenceIsEnglish_NoticeIsGeneratedAndPopulatedInPreviewDocumentField(String actionSelected) {
         sscsCaseData.getPostponementRequest().setActionPostponementRequestSelected(actionSelected);
@@ -118,8 +119,8 @@ public class ActionPostponementRequestMidEventHandlerTest {
         assertThat(response.getErrors().size(), is(0));
         assertThat(response.getData().getDocumentStaging().getPreviewDocument(), is(notNullValue()));
         final DocumentLink expectedDocumentLink = DocumentLink.builder()
-                .documentFilename(String.format("Directions Notice issued on %s.pdf",
-                        LocalDate.now().format(DateTimeFormatter.ofPattern("dd-MM-YYYY"))))
+                .documentFilename("Directions Notice issued on %s.pdf".formatted(
+                    LocalDate.now().format(DateTimeFormatter.ofPattern("dd-MM-YYYY"))))
                 .documentBinaryUrl(URL + "/binary")
                 .documentUrl(URL)
                 .build();
