@@ -1,6 +1,6 @@
 package uk.gov.hmcts.reform.sscs.ccd.presubmit.issuefinaldecision.pip;
 
-import static org.junit.Assert.*;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 import static org.mockito.MockitoAnnotations.openMocks;
@@ -15,9 +15,9 @@ import java.util.List;
 import java.util.Map;
 import junitparams.JUnitParamsRunner;
 import junitparams.Parameters;
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.junit.runner.RunWith;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Mock;
@@ -76,7 +76,7 @@ public class PipIssueFinalDecisionAboutToStartHandlerTest {
 
     private DecisionNoticeService decisionNoticeService;
 
-    @Before
+    @BeforeEach
     public void setUp() throws IOException {
         openMocks(this);
         when(previewDecisionService.getBenefitType()).thenReturn("PIP");
@@ -127,6 +127,7 @@ public class PipIssueFinalDecisionAboutToStartHandlerTest {
     }
 
     @Test
+    // JunitParamsRunnerToParameterized conversion not supported
     @Parameters({"ABOUT_TO_SUBMIT", "MID_EVENT", "SUBMITTED"})
     public void givenANonCallbackType_thenReturnFalse(CallbackType callbackType) {
         assertFalse(handler.canHandle(callbackType, callback));
@@ -172,7 +173,7 @@ public class PipIssueFinalDecisionAboutToStartHandlerTest {
         // CHeck that the document has the correct (updated) issued date.
         assertNotNull(previewResponse.getData().getSscsFinalDecisionCaseData().getWriteFinalDecisionPreviewDocument());
         assertEquals(DocumentLink.builder()
-            .documentFilename(String.format("Final Decision Notice issued on %s.pdf", LocalDate.now().format(DateTimeFormatter.ofPattern("dd-MM-yyyy"))))
+            .documentFilename("Final Decision Notice issued on %s.pdf".formatted(LocalDate.now().format(DateTimeFormatter.ofPattern("dd-MM-yyyy"))))
             .documentBinaryUrl(URL + "/binary")
             .documentUrl(URL)
             .build(), previewResponse.getData().getSscsFinalDecisionCaseData().getWriteFinalDecisionPreviewDocument());
@@ -181,8 +182,8 @@ public class PipIssueFinalDecisionAboutToStartHandlerTest {
             true, true);
 
         // Check that the generated date has not been updated
-        Assert.assertNotNull(payload.getGeneratedDate());
-        Assert.assertEquals(LocalDate.parse("2018-01-01"), payload.getGeneratedDate());
+        Assertions.assertNotNull(payload.getGeneratedDate());
+        Assertions.assertEquals(LocalDate.parse("2018-01-01"), payload.getGeneratedDate());
     }
 
     @Test
@@ -209,7 +210,7 @@ public class PipIssueFinalDecisionAboutToStartHandlerTest {
         // CHeck that the document has the correct (updated) issued date.
         assertNotNull(previewResponse.getData().getSscsFinalDecisionCaseData().getWriteFinalDecisionPreviewDocument());
         assertEquals(DocumentLink.builder()
-            .documentFilename(String.format("Final Decision Notice issued on %s.pdf", LocalDate.now().format(DateTimeFormatter.ofPattern("dd-MM-yyyy"))))
+            .documentFilename("Final Decision Notice issued on %s.pdf".formatted(LocalDate.now().format(DateTimeFormatter.ofPattern("dd-MM-yyyy"))))
             .documentBinaryUrl(URL + "/binary")
             .documentUrl(URL)
             .build(), previewResponse.getData().getSscsFinalDecisionCaseData().getWriteFinalDecisionPreviewDocument());
@@ -218,8 +219,8 @@ public class PipIssueFinalDecisionAboutToStartHandlerTest {
             false, true);
 
         // Check that the generated date has not been updated
-        Assert.assertNotNull(payload.getGeneratedDate());
-        Assert.assertEquals(LocalDate.parse("2018-01-01"), payload.getGeneratedDate());
+        Assertions.assertNotNull(payload.getGeneratedDate());
+        Assertions.assertEquals(LocalDate.parse("2018-01-01"), payload.getGeneratedDate());
     }
 
     @Test
@@ -234,13 +235,15 @@ public class PipIssueFinalDecisionAboutToStartHandlerTest {
         assertEquals("No draft final decision notice found on case. Please use 'Write final decision' event before trying to issue.", error);
     }
 
-    @Test(expected = IllegalStateException.class)
+    @Test
     public void throwsExceptionIfItCannotHandleTheAppeal() {
+        assertThrows(IllegalStateException.class, () -> {
 
-        when(pipDecisionNoticeOutcomeService.getBenefitType()).thenReturn("PIP");
+            when(pipDecisionNoticeOutcomeService.getBenefitType()).thenReturn("PIP");
 
-        when(callback.getEvent()).thenReturn(EventType.APPEAL_RECEIVED);
-        handler.handle(ABOUT_TO_START, callback, USER_AUTHORISATION);
+            when(callback.getEvent()).thenReturn(EventType.APPEAL_RECEIVED);
+            handler.handle(ABOUT_TO_START, callback, USER_AUTHORISATION);
+        });
     }
 
     private NoticeIssuedTemplateBody verifyTemplateBody(String image, String expectedName, String expectedAppointeeName, String dateOfDecision, boolean allowed, boolean isSetAside, boolean isDraft,
